:bug: Fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-html {
+html, body, #root {
   width: 100%;
   height: 100%;
 }
@@ -13,8 +13,6 @@ body {
 }
 
 #root {
-  width: 100vw;
-  height: 100vh;
   user-select: none;
 }
 
